check signature with sha256

--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "mocha -r ts-node/register tests/**/*.ts",
+    "test": "mocha -r ts-node/register tests/**/*.ts  --timeout 30000",
     "example": "ts-node ./src/example.ts",
+    "setup": "ts-node ./src/setup.ts",
     "subscribe": "ts-node ./src/block-subscribe.ts"
   },
   "repository": {
