add mint script

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 # TONCENTER_RPC_URL=https://toncenter.com/api/v2/jsonRPC
 TONCENTER_RPC_URL=https://testnet.toncenter.com/api/v2/jsonRPC
 TONCENTER_API_KEY=
+
+SIGNER_MN=""
+
+ED25519_SK=""
+
+XPNFT_ADDRESS=""
