--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "unfreeze": "ts-node ./src/unfreeze-nft.ts",
     "freeze": "ts-node ./src/freeze-nft.ts",
     "subscribe": "ts-node ./src/block-subscribe.ts",
-    "test-nft": "ts-node ./src/test-nft.ts"
+    "test-nft": "ts-node ./src/test-nft.ts",
+    "build": "toncli build",
+    "deploy": "toncli deploy"
   },
   "repository": {
     "type": "git",
