--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "subscribe": "ts-node ./src/block-subscribe.ts",
     "test-nft": "ts-node ./src/test-nft.ts",
     "build": "toncli build",
-    "deploy": "toncli deploy"
+    "deploy": "toncli deploy",
+    "lint": "eslint ./src --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -40,7 +41,10 @@
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.23",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
     "chai": "^4.3.6",
+    "eslint": "^8.14.0",
     "mocha": "^9.2.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
