--- a/project.yaml
+++ b/project.yaml
@@ -1,30 +1,7 @@
-# nft-item:
-#     data: fift/nft-item_data.fif
-#     func:
-#         - func/params.fc
-#         - func/op-codes.fc
-#         - func/nft-item.fc
-
-# nft-collection:
-#     data: fift/nft-collection_data.fif
-#     func:
-#         - func/params.fc
-#         - func/op-codes.fc
-#         - func/nft-collection.fc
-
-# nft-marketplace:
-#     data: fift/nft-marketplace_data.fif
-#     func:
-#         - func/params.fc
-#         - func/op-codes.fc
-#         - func/nft-marketplace.fc
-
-# nft-sale:
-#     data: fift/nft-sale_data.fif
-#     func:
-#         - func/params.fc
-#         - func/op-codes.fc
-#         - func/nft-sale.fc
+burner:
+    data: fift/burner_data.fif
+    func:
+        - func/burner.func
 
 bridge:
     data: fift/bridge_data.fif
