able to change public key

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "ts-node ./src/index.ts",
     "test": "mocha -r ts-node/register tests/**/*.ts  --timeout 30000",
     "setup": "ts-node ./src/index.ts setup",
+    "update": "ts-node ./src/index.ts update",
     "deploy-collection": "ts-node ./src/index.ts deploy-collection",
     "mint": "ts-node ./src/index.ts mint",
     "withdraw": "ts-node ./src/index.ts withdraw",
