--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test-nft": "ts-node ./src/test-nft.ts",
     "build": "toncli build",
     "deploy": "toncli deploy",
-    "lint": "eslint ./src --ext .ts"
+    "lint": "eslint ./src --ext .ts",
+    "activate": "ts-node ./src/activate-wallet.ts"
   },
   "repository": {
     "type": "git",
