initial commit for burner contract

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "deploy-collection": "ts-node ./src/index.ts deploy-collection",
     "mint": "ts-node ./src/index.ts mint",
     "withdraw": "ts-node ./src/index.ts withdraw",
+    "checked": "ts-node ./src/index.ts checked",
     "unfreeze": "ts-node ./src/index.ts unfreeze",
     "freeze": "ts-node ./src/index.ts freeze",
     "whitelist": "ts-node ./src/index.ts whitelist",
