updated burner contract

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
 # TONCENTER_RPC_URL=https://toncenter.com/api/v2/jsonRPC
-TONCENTER_RPC_URL=https://testnet.toncenter.com/api/v2/jsonRPC
+TONCENTER_RPC_URL=
 TONCENTER_API_KEY=
 
-SIGNER_MN=""
-
-ED25519_SK=""
-
+SIGNER_MN=
+BRIDGE_ADDRESS=
+ED25519_SK=
+BURNER_ADDRESS=
+BURNER_OWNER=
 XPNFT_ADDRESS=""
